LAYOUT: Header ok (to fix align items) - Add Jumbotron - Add section card

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,34 @@
 body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+
+
+
+
+
+
+
+/*********************************
+    DEBUG
+*********************************/
+
+.debug header {
+    height: 80px;
+    background-color: purple;
+}
+
+.debug .box-1 {
+    height: 50px;
+    background-color: yellow;
+    border: 5px solid black;
+}
+
+.debug .box-2 {
+    height: 200px;
+    background-color: orange;
+    border: 5px solid black;
+}
+
+.debug .jumbotron {
+    background-color: palevioletred;
+}
